--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ studio_log*
 
 # Wakanda backup
 *.waBackup
+/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/favicon.ico/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/favicon.ico/TestGitProj/WebFolder/index.html
