--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,1 @@
-# OS X
-*.DS_Store
-._*
-
-# Wakanda preferences
-*.waPreferences
-
-# Wakanda log
-*.waLog
-*/Logs
-studio_log*
-
-# Wakanda code symbols
-*.waSym
-*.waSymData
-
-# Wakanda index
-*.waIndex
-*.Match
-
-# Wakanda User and Group cache
-*.cacheUAG
-
-# Wakanda backup
-*.waBackup
-/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/favicon.ico/TestGitProj/WebFolder/index.html/TestGitProj/WebFolder/favicon.ico/TestGitProj/WebFolder/index.html
+# OS X*.DS_Store._*# Wakanda preferences*.waPreferences# Wakanda log*.waLog*/Logsstudio_log*# Wakanda code symbols*.waSym*.waSymData# Wakanda index*.waIndex*.Match# Wakanda User and Group cache*.cacheUAG# Wakanda backup*.waBackup
